# TrinityGameEngine

./: BaseObject.cpp  BaseObject.h  CMakeLists.txt  Camera.cpp  Camera.h  ElementBufferObject.cpp  ElementBufferObject.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Movable.cpp  Movable.h  MoveableObject.cpp  MoveableObject.h  MultiTextureMesh.cpp  MultiTextureMesh.h  Object.cpp  Object.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  SingleTextureMesh.cpp  SingleTextureMesh.h  SingleTextureMeshWithLight.cpp  SingleTextureMeshWithLight.h  Structs.h  Text.cpp  Text.h  Texture.cpp  Texture.h  TextureHandler.cpp  TextureHandler.h  VertexArrayObject.cpp  VertexArrayObject.h  VertexBufferObject.cpp  VertexBufferObject.h  (+8 more)
include/GLFW/: glfw3.h
include/KHR/: khrplatform.h
include/glad/: glad.h
include/glm/detail/: setup.hpp
include/glm/ext/: matrix_clip_space.hpp  matrix_clip_space.inl  matrix_transform.hpp
include/glm/gtc/: quaternion.hpp
include/glm/gtx/: matrix_decompose.inl
include/stb/: stb_image.h
